adiciona todos os testes no crud de produto