@@ -1,8 +1,9 @@
 package com.ecommerce.produto.controller;
 
+import com.ecommerce.produto.model.Categoria;
 import com.ecommerce.produto.model.Marca;
-import com.ecommerce.produto.model.dto.in.ProdutoDtoIn;
 import com.ecommerce.produto.model.dto.out.ProdutoDtoOut;
+import com.ecommerce.produto.service.exception.ResourceNotFoundException;
 import com.ecommerce.produto.util.ProdutoFactory;
 import com.ecommerce.produto.model.Produto;
 import com.ecommerce.produto.service.ProdutoService;
@@ -22,9 +23,11 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @ExtendWith(SpringExtension.class)
 class ProdutoControllerTest {
@@ -39,36 +42,37 @@ class ProdutoControllerTest {
 
         Marca marca = new Marca(1L, "Tesla");
 
-        Produto produto = new Produto(1L, "Caderno", new BigDecimal(25.99), marca, "Preto");
+        Produto produto = new Produto(1L, "Caderno", new BigDecimal("25.99"), marca, "Preto");
 
         BDDMockito.when(serviceMocked.findById(ArgumentMatchers.any()))
                 .thenReturn(produto);
 
+        BDDMockito.when(serviceMocked.findAll(ArgumentMatchers.any(), ArgumentMatchers.any(),
+                        ArgumentMatchers.any(), ArgumentMatchers.any()))
+                .thenReturn( new PageImpl<>(List.of(produto)));
+
         BDDMockito.when(serviceMocked.save(ArgumentMatchers.any()))
                 .thenReturn(produto);
 
+        BDDMockito.when(serviceMocked.update(ArgumentMatchers.any(), ArgumentMatchers.any()))
+                .thenReturn(produto);
+
+        Categoria limpeza = new Categoria(1L, "Limpeza");
+        produto.getCategorias().add(limpeza);
+        BDDMockito.when(serviceMocked.associaCategoria(ArgumentMatchers.any(), ArgumentMatchers.any()))
+                .thenReturn(produto);
+
+        BDDMockito.when(serviceMocked.findCategoriasByProduto(ArgumentMatchers.any(), ArgumentMatchers.any()))
+                .thenReturn(new PageImpl<>(Collections.emptyList()));
+
+        BDDMockito.when(serviceMocked.setaEstoque(ArgumentMatchers.any(), ArgumentMatchers.any()))
+                .thenReturn(produto);
     }
 
     @Test
     @DisplayName("findAll: retorna uma lista paginada quando existem produtos")
-    void findAll_retornaListaPaginada_quandoExistemProdutos() {
-        Marca marca = new Marca(1L, "Tesla");
-
-        Produto produto = new Produto(1L, "Caderno", new BigDecimal(25.99), marca, "Preto");
-        PageImpl<Produto> produtos =
-                new PageImpl<>(Arrays.asList(produto));
-
-        BDDMockito.when(serviceMocked.findAll(ArgumentMatchers.any(), ArgumentMatchers.any(),
-                        ArgumentMatchers.any(), ArgumentMatchers.any()))
-                .thenReturn(produtos);
-
-        ResponseEntity<Page<ProdutoDtoOut>> retorno = controller.findAll(null, null, null, null);
-        // garante o status code
-        Assertions.assertThat(retorno.getStatusCode()).isEqualTo(HttpStatus.OK);
-
-        Assertions.assertThat(retorno.getBody().toList())
-                .isNotNull()
-                .hasSize(1);
+    void findAll() {
+        assertEquals(HttpStatus.OK, controller.findAll(null, null, null, null).getStatusCode());
     }
 
     @Test
@@ -76,7 +80,7 @@ class ProdutoControllerTest {
     void findAll_retorna204_quandoNaoExistemProdutos() {
         BDDMockito.when(serviceMocked.findAll(ArgumentMatchers.any(), ArgumentMatchers.any(),
                         ArgumentMatchers.any(), ArgumentMatchers.any()))
-                .thenReturn(new PageImpl<Produto>(Arrays.asList()));
+                .thenReturn(new PageImpl<Produto>(List.of()));
 
         ResponseEntity<Page<ProdutoDtoOut>> retorno = controller.findAll(null, null, null, null);
 
@@ -143,7 +147,7 @@ class ProdutoControllerTest {
 
     @Test
     @DisplayName("findById: retorna produto buscando pelo ID")
-    void findById_retornaProdutoBuscandoPeloId_QuandoSucesso() {
+    void findById() {
         ResponseEntity<Produto> retorno = controller.findById(null);
 
         Produto produto = retorno.getBody();
@@ -155,6 +159,18 @@ class ProdutoControllerTest {
     }
 
     @Test
+    @DisplayName("findById: Lanca excecao quando não encontra produto")
+    void findByIdLancaExcecaoQuandoNaoEncontraProduto() {
+        BDDMockito.when(serviceMocked.findById(ArgumentMatchers.any()))
+                .thenThrow(new ResourceNotFoundException(1L));
+
+        Assertions.assertThatThrownBy(() -> {
+            controller.findById(null);
+        }).isInstanceOf(ResourceNotFoundException.class);
+    }
+
+    @Test
+    @DisplayName("save: persiste produto e retorna status 201")
     void save() {
         ResponseEntity<Void> retorno = controller.save(null);
 
@@ -163,40 +179,36 @@ class ProdutoControllerTest {
     }
 
     @Test
-    void updateProdutoSeForEncontrado() {
-        Produto produtoEncontrado = serviceMocked.findById(null);
-        Produto produtoAtualizado = serviceMocked.findById(null);
-        produtoAtualizado.setNome("Sacola");
-
-        BDDMockito.when(serviceMocked.update(ArgumentMatchers.any(), ArgumentMatchers.any()))
-                        .thenReturn(produtoAtualizado);
-
-        Produto p = serviceMocked.update(new ProdutoDtoIn(produtoEncontrado), 1L);
-
-        Assertions.assertThat(p.getId())
-                .isEqualTo(produtoEncontrado.getId());
-
-        Assertions.assertThat(p.getNome())
-                .isEqualTo("Sacola");
+    @DisplayName("update: atualiza produto se produto for encontrado")
+    void update() {
+        assertEquals(HttpStatus.OK, controller.update(null, null).getStatusCode());
     }
 
     @Test
+    @DisplayName("delete: deleta produto se produto for encontrado")
     void delete() {
+        assertEquals(HttpStatus.ACCEPTED, controller.delete(null).getStatusCode());
     }
 
     @Test
     void associaCategoria() {
+        ResponseEntity<Void> retorno = controller.associaCategoria(null, null);
+        assertEquals(HttpStatus.ACCEPTED, retorno.getStatusCode());
     }
 
     @Test
     void desassociaCategoria() {
+        ResponseEntity<Void> retorno = controller.desassociaCategoria(null, null);
+        assertEquals(HttpStatus.ACCEPTED, retorno.getStatusCode());
     }
 
     @Test
-    void findCategoriaByProduto() {
+    void findCategoriasByProduto() {
+        assertEquals(HttpStatus.NO_CONTENT,  controller.findCategoriasByProduto(null, null).getStatusCode());
     }
 
     @Test
     void setaEstoque() {
+        assertEquals(HttpStatus.ACCEPTED, controller.setaEstoque(null, null).getStatusCode() );
     }
 }
